--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -84,3 +84,7 @@
   animation-duration: 500ms;
   animation-timing-function: ease-in-out;
 }
+
+.icon:hover {
+  fill: #0D87FF; /* Replace this with the desired hover color */
+}
